--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <b>CÓ CÁI LOZ ẤY TIN NGƯỜI VL =))</b>
     </div>
 	<img src="http://vignette4.wikia.nocookie.net/warframe/images/5/5f/Famous-characters-Troll-face-45719.png/revision/latest?cb=20140702154027"width="400" height="354" />
-	<div class="fb-like" data-href="https://thisinh.github.io/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+	<div class="fb-like" data-href="https://thisinh.github.io/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 	<div class="fb-page" data-href="https://www.facebook.com/gif16vn/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/gif16vn/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/gif16vn/">GIFs 16+</a></blockquote></div>
   </body>
 </html>
