--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     	<title>Tra cứu điểm thi THPT quốc gia 2017</title>
-	<meta property="og:image" content="http://streaming1.danviet.vn/upload/2-2017/images/2017-06-26/149844976012407-cach-tra-cuu-diem-thi-thpt-quoc-gia.jpg" />
+	<meta property="og:image" content="1.jpg" />
 	<meta property="og:url" content="https://thisinh.github.io/" />
 	<meta property="og:title" content="Tra cứu điểm thi THPT quốc gia 2017" />
 	<meta property="og:description" content="Theo Bộ GD&ĐT điểm thì THPT quốc gia 2017 sẽ công bố sớm hơn dự kiến là vào ngày 5/7/2017. Các quý phụ huynh và thì sinh có thể tra cứu điểm thi, kết quả, điểm chuẩn các trường đại học tại đây..." />
